add benchmark skeleton

--- a/bench.conf
+++ b/bench.conf
@@ -1,4 +1,7 @@
-clients = 100
+namespace = zkTest
+requests = 1000
+clients = 10
+key_size_bytes = 16
 value_size_bytes = 1024
 type = "crud"
 cleanup = false
