add same key config

--- a/bench.conf
+++ b/bench.conf
@@ -1,12 +1,13 @@
 namespace = zkTest
 requests = 100
 clients = 10
+same_key = false
 key_size_bytes = 16
-value_size_bytes = 256
+value_size_bytes = 16
 type = "crud"
 cleanup = false
 
 # ZooKeeper ensemble
 server.1=instance1:2181
-server.2=instance2:2181
-server.3=instance3:2181
+# server.2=instance2:2181
+# server.3=instance3:2181
