write stat to output

--- a/bench.conf
+++ b/bench.conf
@@ -1,6 +1,6 @@
 namespace = zkTest
-requests = 100
-clients = 10
+requests = 1000
+clients = 100
 same_key = false
 key_size_bytes = 16
 value_size_bytes = 16
@@ -9,5 +9,5 @@ cleanup = false
 
 # ZooKeeper ensemble
 server.1=instance1:2181
-# server.2=instance2:2181
-# server.3=instance3:2181
+server.2=instance2:2181
+server.3=instance3:2181
