add clean option to zk client

--- a/bench_light.conf
+++ b/bench_light.conf
@@ -1,6 +1,6 @@
 namespace = zkTest
-requests = 10
-clients = 1
+requests = 100
+clients = 2
 same_key = false
 key_size_bytes = 8
 value_size_bytes = 16
@@ -8,6 +8,6 @@ type = "crud"
 cleanup = false
 
 # ZooKeeper ensemble
-#server.1=instance1:2181
+server.1=instance1:2181
 #server.2=instance2:2181
 server.3=instance3:2181
