fix instance prefix

--- a/bench_light.conf
+++ b/bench_light.conf
@@ -8,6 +8,6 @@ type = "crud"
 cleanup = false
 
 # ZooKeeper ensemble
-server.1=instance1:2181
-#server.2=instance2:2181
-server.3=instance3:2181
+server.0=pano0:2181
+#server.1=pano1:2181
+server.2=pano2:2181
