--- a/bench.conf
+++ b/bench.conf
@@ -10,4 +10,5 @@ cleanup = false
 # ZooKeeper ensemble
 #server.0=pano0:2181
 #server.1=pano1:2181
-server.2=pano2:2181
+#server.2=pano2:2181
+server.9=pano9:2181
