test based on workload type specifier in configuration

--- a/bench_current.conf
+++ b/bench_current.conf
@@ -4,8 +4,8 @@ clients = 30
 same_key = false
 key_size_bytes = 8
 value_size_bytes = 16
-type = "crud"
-cleanup = false
+type = crud
+cleanup = true
 
 # ZooKeeper ensemble
 
