--- a/bench_medium.conf
+++ b/bench_medium.conf
@@ -4,11 +4,8 @@ clients = 20
 same_key = false
 key_size_bytes = 8
 value_size_bytes = 16
-type = "crud"
-cleanup = false
+type = r
+cleanup = true
 
 # ZooKeeper ensemble
-#server.0=pano0:2181
-#server.1=pano1:2181
-#server.2=pano2:2181
-server.9=pano9:2181
+server.0=localhost:2181
