--- a/bench.conf
+++ b/bench.conf
@@ -1,11 +1,17 @@
 namespace = zkTest
-requests = 10
-clients = 1
+requests = 1000
+clients = 5
 same_key = false
 key_size_bytes = 8
 value_size_bytes = 16
 type = crud
 cleanup = true
 
+# enable random access
+# percents do not have to add up to 1.0
+random_access = true
+read_percent = 0.3
+write_percent = 0.7
+
 # ZooKeeper ensemble
-server.0=localhost:2181
+server.0=order19:2181
