support launching parallel request group

--- a/bench.conf
+++ b/bench.conf
@@ -1,10 +1,10 @@
 namespace = zkTest
-requests = 1000
-clients = 5
+requests = 2000
+clients = 15
 same_key = false
 key_size_bytes = 8
 value_size_bytes = 16
-type = crud
+type = cmd
 cleanup = true
 
 # enable random access
@@ -12,6 +12,9 @@ cleanup = true
 random_access = true
 read_percent = 0.3
 write_percent = 0.7
+
+# parallelism only applies to 'm' workload (r/w)
+parallelism = 10
 
 # ZooKeeper ensemble
 server.0=order19:2181
