--- a/bench.conf
+++ b/bench.conf
@@ -1,6 +1,6 @@
 namespace = zkTest
-requests = 2000
-clients = 15
+requests = 3000
+clients = 20
 same_key = false
 key_size_bytes = 8
 value_size_bytes = 16
@@ -10,11 +10,27 @@ cleanup = true
 # enable random access
 # percents do not have to add up to 1.0
 random_access = true
-read_percent = 0.3
-write_percent = 0.7
-
-# parallelism only applies to 'm' workload (r/w)
-parallelism = 10
+read_percent = 0.8
+write_percent = 0.5
+runs = 15
 
 # ZooKeeper ensemble
-server.0=order19:2181
+server.0=order0:2181
+server.2=order2:2181
+server.3=order3:2181
+server.4=order4:2181
+server.5=order5:2181
+server.6=order6:2181
+server.7=order7:2181
+server.8=order8:2181
+server.9=order9:2181
+server.10=order10:2181
+server.11=order11:2181
+server.12=order12:2181
+server.13=order13:2181
+server.14=order14:2181
+server.15=order15:2181
+server.16=order16:2181
+server.17=order17:2181
+server.18=order18:2181
+server.19=order19:2181
