--- a/bench_current.conf
+++ b/bench_current.conf
@@ -1,21 +1,36 @@
 namespace = zkTest
-requests = 100
-clients = 30
+requests = 1000
+clients = 20
 same_key = false
 key_size_bytes = 8
 value_size_bytes = 16
-type = crud
+type = cmd
 cleanup = true
 
-# ZooKeeper ensemble
+# enable random access
+# percents do not have to add up to 1.0
+random_access = true
+read_percent = 0.8
+write_percent = 0.5
+runs = 5
 
-server.0=pano0:2181
-server.1=pano1:2181
-server.2=pano2:2181
-server.3=pano3:2181
-server.4=pano4:2181
-server.5=pano5:2181
-server.6=pano6:2181
-server.7=pano7:2181
-server.8=pano8:2181
-server.9=pano9:2181
+# ZooKeeper ensemble
+server.0=order0:2181
+server.2=order2:2181
+server.3=order3:2181
+server.4=order4:2181
+server.5=order5:2181
+server.6=order6:2181
+server.7=order7:2181
+server.8=order8:2181
+server.9=order9:2181
+server.10=order10:2181
+server.11=order11:2181
+server.12=order12:2181
+server.13=order13:2181
+server.14=order14:2181
+server.15=order15:2181
+server.16=order16:2181
+server.17=order17:2181
+server.18=order18:2181
+server.19=order19:2181
