update conf example

--- a/bench_wo.conf
+++ b/bench_wo.conf
@@ -1,6 +1,6 @@
 namespace = zkTest
-requests = 1000
-clients = 5
+requests = 2000
+clients = 40
 same_key = false
 key_size_bytes = 8
 value_size_bytes = 16
@@ -8,4 +8,4 @@ type = cru
 cleanup = false
 
 # ZooKeeper ensemble
-server.0=localhost:2181
+server.0=order19:2181
