--- a/bench_light.conf
+++ b/bench_light.conf
@@ -1,5 +1,5 @@
 namespace = zkTest
-requests = 10
+requests = 100
 clients = 2
 same_key = false
 key_size_bytes = 8
@@ -8,4 +8,4 @@ type = crud
 cleanup = true
 
 # ZooKeeper ensemble
-server.0=pano3:2181
+server.0=order19:2181
