--- a/bench.conf
+++ b/bench.conf
@@ -1,6 +1,6 @@
 namespace = zkTest
 requests = 3000
-clients = 20
+clients = 15
 same_key = false
 key_size_bytes = 8
 value_size_bytes = 16
@@ -9,10 +9,10 @@ cleanup = true
 
 # enable random access
 # percents do not have to add up to 1.0
-random_access = true
+random_access = false
 read_percent = 0.4
 write_percent = 0.8
-runs = 15 
+runs = 25
 
 # ZooKeeper ensemble
 # server.0=order0:2181
@@ -33,5 +33,5 @@ runs = 15
 # server.15=order15:2181
 # server.16=order16:2181
 # server.17=order17:2181
-server.18=order18:2181
+# server.18=order18:2181
 server.19=order19:2181
