feat: deploy the usual test cfg setup.

--- a/bench.conf
+++ b/bench.conf
@@ -15,9 +15,9 @@ write_percent = 0.8
 runs = 25
 
 # ZooKeeper ensemble
-# server.0=order0:2181
-# server.1=order1:2181
-# server.2=order2:2181
+server.0=node0:2181
+server.1=node1:2181
+server.2=node2:2181
 # server.3=order3:2181
 # server.4=order4:2181
 # server.5=order5:2181
