--- a/bench_light.conf
+++ b/bench_light.conf
@@ -1,11 +1,15 @@
-namespace = zkTest
-requests = 100
-clients = 2
+namespace = zkWarmup
+requests = 5000
+clients = 20
 same_key = false
 key_size_bytes = 8
 value_size_bytes = 16
 type = crud
-cleanup = true
+cleanup = false
+parallelism = 2
+runs = 1
 
 # ZooKeeper ensemble
-server.0=order19:2181
+server.0=node0:2181
+server.1=node1:2181
+server.2=node2:2181
