--- a/bench_normal.conf
+++ b/bench_normal.conf
@@ -1,20 +1,23 @@
 namespace = zkTest
-requests = 200
-clients = 20
+requests = 400
+clients = 60
 same_key = false
-key_size_bytes = 8
-value_size_bytes = 16
+key_size_bytes = 512
+value_size_bytes = 1024
 type = crud
 cleanup = true
+parallelism = 10
+runs = 20
 
 # ZooKeeper ensemble
-server.0=pano0:2181
-server.1=pano1:2181
-server.2=pano2:2181
-server.3=pano3:2181
-server.4=pano4:2181
-server.5=pano5:2181
-server.6=pano6:2181
-server.7=pano7:2181
-server.8=pano8:2181
-server.9=pano9:2181
+server.0=node3:2181
+# server.0=node0:2181
+# server.1=node1:2181
+# server.2=node2:2181
+# server.3=pano3:2181
+# server.4=pano4:2181
+# server.5=pano5:2181
+# server.6=pano6:2181
+# server.7=pano7:2181
+# server.8=pano8:2181
+# server.9=pano9:2181
