feat: classify different experiments.

--- a/bench_mixed.conf
+++ b/bench_mixed.conf
@@ -1,13 +1,13 @@
 namespace = zkTest
-requests = 4000
-clients = 60
+requests = 400
+clients = 50
 same_key = false
 key_size_bytes = 2
 value_size_bytes = 1024
-type = crud
+type = m
 cleanup = true
-parallelism = 1
-runs = 5
+parallelism = 20
+runs = 40
 
 # ZooKeeper ensemble (via HAProxy load balancer)
 server.0=node3:2181
