feat: setup pure write overload tests, results are clear.

--- a/bench_mixed.conf
+++ b/bench_mixed.conf
@@ -1,12 +1,12 @@
 namespace = zkTest
 requests = 400
-clients = 50
+clients = 80
 same_key = false
 key_size_bytes = 2
 value_size_bytes = 1024
-type = m
+type = u
 cleanup = true
-parallelism = 20
+parallelism = 40
 runs = 40
 
 # ZooKeeper ensemble (via HAProxy load balancer)
