fix: route through the HAProxy

--- a/bench_normal.conf
+++ b/bench_normal.conf
@@ -9,8 +9,9 @@ cleanup = true
 parallelism = 10
 runs = 20
 
-# ZooKeeper ensemble
-server.0=node3:2181
+# ZooKeeper ensemble (via HAProxy on node3)
+server.0=10.10.1.4:2181
+# server.0=node3:2181
 # server.0=node0:2181
 # server.1=node1:2181
 # server.2=node2:2181
