--- a/bench.conf
+++ b/bench.conf
@@ -8,30 +8,15 @@ type = cmd
 cleanup = true
 
 # enable random access
-# percents do not have to add up to 1.0
-random_access = false
-read_percent = 0.4
-write_percent = 0.8
+# percents should add up to 1.0 (or be normalized by the benchmark)
+random_access = true
+read_percent = 0.7
+write_percent = 0.3
 runs = 25
 
-# ZooKeeper ensemble
-server.0=node0:2181
-server.1=node1:2181
-server.2=node2:2181
-# server.3=order3:2181
-# server.4=order4:2181
-# server.5=order5:2181
-# server.6=order6:2181
-# server.7=order7:2181
-# server.8=order8:2181
-# server.9=order9:2181
-# server.10=order10:2181
-# server.11=order11:2181
-# server.12=order12:2181
-# server.13=order13:2181
-# server.14=order14:2181
-# server.15=order15:2181
-# server.16=order16:2181
-# server.17=order17:2181
-# server.18=order18:2181
-server.19=order19:2181
+# ZooKeeper ensemble (via HAProxy on node3)
+server.0=10.10.1.4:2181
+# Direct connections (not recommended - bypasses HAProxy):
+# server.0=node0:2181
+# server.1=node1:2181
+# server.2=node2:2181
